# ai-content-creator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.yaml  leonardo_client.py  llm_client.py  magic_story.py  main.py  prompt.py  pyproject.toml  story_builder.py  story_image_generator.py  story_processor.py  subtitle_generator.py  transcript.py  video_story_builder.py  voice_generator.py
databases/: image_database.py  personnage_database.py  story_database.py
