[project]
name = "ai-content-creator"
version = "0.1.0"
description = "Automated Story Video Generator"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "openai>=2.6.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
]

[tool.ruff]
src = ["src", "examples"]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
